[project]
name = "text-to-speech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.0",
    "ipython>=9.4.0",
    "numpy>=2.3.2",
    "optimum>=1.27.0",
    "pydub>=0.25.1",
    "scipy>=1.16.1",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.55.0",
]
